load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "blame.go",
        "blob.go",
        "branch.go",
        "checkout.go",
        "cherrypick.go",
        "clone.go",
        "commit.go",
        "config.go",
        "credentials.go",
        "delta_string.go",
        "describe.go",
        "diff.go",
        "difflinetype_string.go",
        "features.go",
        "git.go",
        "git_dynamic.go",
        "graph.go",
        "handles.go",
        "ignore.go",
        "index.go",
        "indexer.go",
        "mempack.go",
        "merge.go",
        "note.go",
        "object.go",
        "odb.go",
        "packbuilder.go",
        "patch.go",
        "rebase.go",
        "refdb.go",
        "reference.go",
        "remote.go",
        "repository.go",
        "reset.go",
        "revert.go",
        "revparse.go",
        "settings.go",
        "signature.go",
        "stash.go",
        "status.go",
        "submodule.go",
        "tag.go",
        "tree.go",
        "walk.go",
        "wrapper.c",
    ],
    cgo = True,
    importmap = "github.com/slyphon/rockstore/vendor/git2go",
    importpath = "git2go",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "blame_test.go",
        "blob_test.go",
        "branch_test.go",
        "cherrypick_test.go",
        "clone_test.go",
        "config_test.go",
        "describe_test.go",
        "diff_test.go",
        "git_test.go",
        "index_test.go",
        "indexer_test.go",
        "mempack_test.go",
        "merge_test.go",
        "note_test.go",
        "object_test.go",
        "odb_test.go",
        "patch_test.go",
        "push_test.go",
        "rebase_test.go",
        "reference_test.go",
        "remote_test.go",
        "repository_test.go",
        "reset_test.go",
        "revert_test.go",
        "revparse_test.go",
        "settings_test.go",
        "stash_test.go",
        "status_test.go",
        "submodule_test.go",
        "tag_test.go",
        "tree_test.go",
    ],
    embed = [":go_default_library"],
)
